@@ -43,9 +43,15 @@ class AKTasksTableView: AKCustomView, UITableViewDataSource, UITableViewDelegate
         let category = DataInterface.getCategories(day: self.day!)[(indexPath as NSIndexPath).section]
         let task = DataInterface.getTasks(category: category)[(indexPath as NSIndexPath).row]
         
+        // Sanity Checks
+        AKChecks.workingDayCloseSanityChecks(task: task)
+        
         let cell = self.tasksTable.dequeueReusableCell(withIdentifier: "TasksTableCell") as! AKTasksTableViewCell
+        
+        // Task Name
         cell.taskNameValue.text = String(format: "%@", task.name ?? "Some Name...")
-        // Completion Percentage.
+        
+        // Task Completion Percentage
         cell.taskCompletionPercentageValue.text = String(format: "%.1f%%", task.completionPercentage)
         switch task.completionPercentage {
         case 1.0 ..< 33.0:
@@ -81,49 +87,8 @@ class AKTasksTableView: AKCustomView, UITableViewDataSource, UITableViewDelegate
             )
             break
         }
-        // Status
-        // Sanity checks: IF ALL CODE IS CORRECT, THE SANITY CHECKS SHOULD ONLY EXECUTE AT THE END OF THE CURRENT DAY
-        // AND PERFORMS CLOSING OF TASKS (SANITY CHECKS IN GENERAL).
-        // 1. Mark the task as NOT_DONE.
-        //  If the project is closed and is NOT today before working day AND
-        //      day is not tomorrow AND
-        //          a. the state is PENDING
-        //          b. the CP is == 0.0% OR
-        //          c. the ICP is == CP
-        // 2. Add the task to PendingQueue.
-        //  If the project is closed and is NOT today before working day AND
-        //      day is not tomorrow AND
-        //          a. the state is PENDING
-        //          b. the CP has been incremented in the day.
-        // 3. Add the task to DilateQueue.
-        //  If the project is closed and is NOT today before working day AND
-        //      day is not tomorrow AND
-        //          a. the state is DILATE
-        if !DataInterface.isProjectOpen(project: (task.category?.day?.project)!) && !DataInterface.isBeforeOpen(project: (task.category?.day?.project)!) {
-            if !DataInterface.isDayTomorrow(day: (task.category?.day)!) {
-                // Sanity check #1
-                if task.state == TaskStates.PENDING.rawValue {
-                    if task.completionPercentage == 0.0 || task.completionPercentage == task.initialCompletionPercentage {
-                        task.state = TaskStates.NOT_DONE.rawValue
-                    }
-                }
-                // Sanity check #2
-                if task.state == TaskStates.PENDING.rawValue && task.completionPercentage != task.initialCompletionPercentage {
-                    task.initialCompletionPercentage = task.completionPercentage
-                    if let pendingQueue = task.category?.day?.project?.pendingQueue {
-                        pendingQueue.addToTasks(task.copy() as! Task)
-                    }
-                }
-                // Sanity check #3
-                if task.state == TaskStates.DILATE.rawValue {
-                    task.initialCompletionPercentage = task.completionPercentage
-                    if let dilateQueue = task.category?.day?.project?.dilateQueue {
-                        dilateQueue.addToTasks(task.copy() as! Task)
-                    }
-                }
-            }
-        }
         
+        // Task State
         cell.taskStateValue.text = task.state
         Func.AKAddBorderDeco(
             cell.taskStateValue,
